--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -27,3 +27,6 @@ jobs:
         node-version: '20.x'
     - name: Install dependencies
       run: npm install
+    - name: Test code
+      run: npm test
+    
